JIRA PHP-455: Fixing margin misalignment in flagging textarea.

--- a/wordpress/wp-content/themes/Eris/style.css
+++ b/wordpress/wp-content/themes/Eris/style.css
@@ -1344,7 +1344,8 @@ fieldset#use_your_account_from {
     .tooltip .middle .azure {
       float: right; }
     .tooltip .middle textarea {
-      width: 100%; }
+      width: 99%;
+      padding: 0; }
 
 .commentForm {
   margin-bottom: 20px; }
